src/objects/Part__c.object
<CustomObject>
    <description>Parts - Product and Shipping Order junction object</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>CMH_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Parts (Asset)</relationshipLabel>
        <relationshipName>Parts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMH_ID__c</fullName>
        <formula>Shipping_Order__r.Clinic_ID__c</formula>
        <label>CMH ID</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompetitorReturn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateReceived__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment_Prep_Deadline__c</fullName>
        <formula>Shipping_Order__r.Equipment_Prep_Deadline__c</formula>
        <label>Equipment Prep Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment_Prepped__c</fullName>
        <formula>Shipping_Order__r.Ernesto_TabletErnesto_Pre_Prepped__c</formula>
        <label>Equipment Prepped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fedex_Label__c</fullName>
        <formula>Asset__r.Fedex_Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fedex Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroundPickUpFee__c</fullName>
        <label>Ground Pick Up Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Count__c</fullName>
        <formula>Asset__r.Product2.Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Time__c</fullName>
        <description>Formula field to calculate the local clinic time to display in player/tablet prep. table</description>
        <formula>/*Dates are good till the year 2020 */ 
IF( 
(( DATEVALUE(now())&gt;= DATE(2003,4,6)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2003,10,26))) || 
(( DATEVALUE(now())&gt;= DATE(2004,4,4)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2004,10,31))) || 
(( DATEVALUE(now())&gt;= DATE(2005,4,3)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2005,10,30))) || 
(( DATEVALUE(now())&gt;= DATE(2006,4,2)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2006,10,29))) || 
(( DATEVALUE(now())&gt;= DATE(2007,3,11)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2007,11,4))) || 
(( DATEVALUE(now())&gt;= DATE(2008,3,9)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2008,11,2))) || 
(( DATEVALUE(now())&gt;= DATE(2009,3,8)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2009,11,1))) || 
(( DATEVALUE(now())&gt;= DATE(2010,3,14)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2010,11,7))) || 
(( DATEVALUE(now())&gt;= DATE(2011,3,13)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2011,11,6))) || 
(( DATEVALUE(now())&gt;= DATE(2012,3,11)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2012,11,4))) || 
(( DATEVALUE(now())&gt;= DATE(2013,3,10)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2013,11,3))) || 
(( DATEVALUE(now())&gt;= DATE(2014,3,9)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2014,11,2))) || 
(( DATEVALUE(now())&gt;= DATE(2015,3,8)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2015,11,1))) || 
(( DATEVALUE(now())&gt;= DATE(2016,3,13)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2016,11,6))) || 
(( DATEVALUE(now())&gt;= DATE(2017,3,12)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2017,11,5))) || 
(( DATEVALUE(now())&gt;= DATE(2018,3,11)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2018,11,4))) || 
(( DATEVALUE(now())&gt;= DATE(2019,3,10)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2019,11,3))) || 
(( DATEVALUE(now())&gt;= DATE(2020,3,8)) &amp;&amp; (DATEVALUE(now())&lt;= DATE(2020,11,1))) 
,(now() + ((Shipping_Order__r.Offset_ST__c-(-6))/24)),(now()+ ((Shipping_Order__r.Offset_DST__c-(-5))/24))) 
/* the above line calculates the offset for Central Time only */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Local Clinic Time</inlineHelpText>
        <label>Local Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MediaPlayer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MediaPlayer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Deployment__c</fullName>
        <formula>Shipping_Order__r.Network_Deployment__c</formula>
        <label>Network Deployment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <formula>Shipping_Order__r.Network__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackageType__c</fullName>
        <label>Package Type</label>
        <picklist>
            <picklistValues>
                <fullName>Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx 2Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx 2Day A.M.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx Express Saver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx First Overnight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx Priority Overnight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx Standard Overnight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PartProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Parts (Part)</relationshipLabel>
        <relationshipName>Part</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Notes_If_Other__c</fullName>
        <label>Part Notes (If Other)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Scanned__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Scanned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Unscanned_1__c</fullName>
        <formula>Quantity__c - Quantity_Scanned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Unscanned 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_in_Part__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity in Part</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quickbase_Id__c</fullName>
        <label>Quickbase Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Asset</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Can only select an asset that is in ContextMedia Inventory</errorMessage>
            <filterItems>
                <field>Asset.Account.Name</field>
                <operation>equals</operation>
                <value>ContextMedia Inventory</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Product_Id__c</fullName>
        <formula>Asset__r.Product2.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Product__c</fullName>
        <formula>Asset__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date_of_Arrival__c</fullName>
        <formula>Shipping_Order__r.RequestedDateofArrival__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Date of Arrival</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPrint__c</fullName>
        <label>SPrint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentCost__c</fullName>
        <label>Shipment Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Order_Notes__c</fullName>
        <formula>Shipping_Order__r.Notes__c</formula>
        <label>Shipping Order Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Order</label>
        <referenceTo>Shipping_Order__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Static_IP__c</fullName>
        <formula>Shipping_Order__r.Static_IP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Static IP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tablet_Prepped__c</fullName>
        <formula>Shipping_Order__r.Tablet_Prepped__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tablet Prepped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeShipped__c</fullName>
        <label>Time Shipped</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <formula>Shipping_Order__r.Time_Zone__c</formula>
        <label>Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking__c</fullName>
        <label>Tracking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>text(Shipping_Order__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X26Screen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>26Screen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X32Screen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>32Screen</label>
        <type>Checkbox</type>
    </fields>
    <label>Part</label>
    <nameField>
        <displayFormat>PART-{000000}</displayFormat>
        <label>Shipping Order Part</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>